--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -1,3 +1,21 @@
-<p>
-  recipe-list works!
-</p>
+<div class="row">
+    <div class="col-xl-12">
+        <button class="btn btn-success">New Recipe</button>
+    </div>
+</div>
+<div class="row mt-3">
+    <div class="col-md-12">
+        <div class="list-group">
+            <a href="#" class="list-group-item list-group-item-action clearfix" *ngFor="let recipe of recipes">
+                <div class="float-left">
+                    <h4 class="list-group-item-heading">{{recipe.name}}</h4>
+                    <p class="list-group-item-text">{{recipe.description}}</p>
+                </div>
+                <span class="float-right">
+                    <img [src]="recipe.imagePath" alt="{{recipe.name}}" class="img-fluid" style="height: auto; max-height: 75px;">
+                </span>
+            </a>
+        </div>
+        <app-recipe-item></app-recipe-item>
+    </div>
+</div>
