--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <div class="col-xl-12">
+    <div class="col-md-12">
         <button class="btn btn-success">New Recipe</button>
     </div>
 </div>
