--- a/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,3 +1,13 @@
-<p>
-  recipe-item works!
-</p>
+<div class="list-group">
+    <a href="#" (click)="onSelected()" class="list-group-item list-group-item-action flex-column align-item-start">
+        <div class="d-flex justify-content-between">
+            <div>
+                <h6>{{recipe.name}}</h6>
+                <p>{{recipe.description}}</p>
+            </div>
+            <span class="align-self-center">
+                <img [src]="recipe.imagePath" alt="{{recipe.name}}" class="img-fluid" style="max-height: 50px;">
+            </span>
+        </div>
+    </a>
+</div>
