--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -5,17 +5,6 @@
 </div>
 <div class="row mt-3">
     <div class="col-md-12">
-        <div class="list-group">
-            <a href="#" class="list-group-item list-group-item-action clearfix" *ngFor="let recipe of recipes">
-                <div class="float-left">
-                    <h4 class="list-group-item-heading">{{recipe.name}}</h4>
-                    <p class="list-group-item-text">{{recipe.description}}</p>
-                </div>
-                <span class="float-right">
-                    <img [src]="recipe.imagePath" alt="{{recipe.name}}" class="img-fluid" style="height: auto; max-height: 75px;">
-                </span>
-            </a>
-        </div>
-        <app-recipe-item></app-recipe-item>
+        <app-recipe-item *ngFor="let recipeElement of recipes" [recipe]="recipeElement" (recipeSelected)="onRecipeSelected(recipeElement)"></app-recipe-item>
     </div>
 </div>
