--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -5,6 +5,6 @@
 </div>
 <div class="row mt-3">
     <div class="col-md-12">
-        <app-recipe-item *ngFor="let recipeElement of recipes" [recipe]="recipeElement" (recipeSelected)="onRecipeSelected(recipeElement)"></app-recipe-item>
+        <app-recipe-item *ngFor="let recipeElement of recipes" [recipe]="recipeElement"></app-recipe-item>
     </div>
 </div>
