--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -16,7 +16,7 @@
           </button>
             <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                 <a class="dropdown-item" style="cursor:pointer" (click)="onAdd()">To Shopping List</a>
-                <a class="dropdown-item" style="cursor:pointer">Edit Recipe</a>
+                <a class="dropdown-item" style="cursor:pointer" (click)="onEditRecipe()">Edit Recipe</a>
                 <a class="dropdown-item" style="cursor:pointer">Delete Recipe</a>
             </div>
         </div>
