--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -1,3 +1,51 @@
-<p>
-  recipe-edit works!
-</p>
+<div class="row">
+    <div class="col-xl-12">
+        <form [formGroup]="recipeForm" (ngSubmit)="onSubmit()">
+            <div class="row">
+                <div class="col-xl-12">
+                    <button class="btn btn-success" type="submit" [disabled]="!recipeForm.valid">Save</button>
+                    <button class="btn btn-danger" type="button">Cancel</button>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-xl-12">
+                    <div class="form-group">
+                        <label for="name">Name</label>
+                        <input type="text" id="name" class="form-control" formControlName="name">
+                    </div>
+                    <div class="form-group">
+                        <label for="imagepath">Image Url</label>
+                        <input type="text" id="imagepath" class="form-control" formControlName="imagepath">
+                    </div>
+                    <img src="" class="img-fluid">
+                    <div class="form-group">
+                        <label for="description">Description</label>
+                        <textarea type="text" id="description" rows="6" class="form-control" formControlName="description"></textarea>
+                    </div>
+                    <p>Ingredients</p>
+                    <div class="row">
+                        <div class="col-xl-12" formArrayName="ingredients">
+                            <div class="row mb-3" *ngFor="let ingredientCtrl of recipeForm.get('ingredients').controls; let i = index" [formGroupName]="i">
+                                <div class="col-xl-8 col-md-6">
+                                    <input type="text" class="form-control" formControlName="name">
+                                </div>
+                                <div class="col-xl-2 col-md-2">
+                                    <input type="number" class="form-control" formControlName="amount">
+                                </div>
+                                <div class="col-xl-2 col-md-2">
+                                    <button class="btn btn-danger" type="button">X</button>
+                                </div>
+                            </div>
+                            <hr>
+                            <div class="row mb-5">
+                                <div class="col-xl-12">
+                                    <button class="btn btn-success" type="button" (click)="onAddIngredient()">Add Ingredient</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </form>
+    </div>
+</div>
