--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -17,7 +17,7 @@
             <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                 <a class="dropdown-item" style="cursor:pointer" (click)="onAdd()">To Shopping List</a>
                 <a class="dropdown-item" style="cursor:pointer" (click)="onEditRecipe()">Edit Recipe</a>
-                <a class="dropdown-item" style="cursor:pointer">Delete Recipe</a>
+                <a class="dropdown-item" style="cursor:pointer" (click)="onDeleteRecipe()">Delete Recipe</a>
             </div>
         </div>
     </div>
