--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -4,7 +4,7 @@
             <div class="row">
                 <div class="col-xl-12">
                     <button class="btn btn-success" type="submit" [disabled]="!recipeForm.valid">Save</button>
-                    <button class="btn btn-danger" type="button">Cancel</button>
+                    <button class="btn btn-danger" type="button" (click)="onCancel()">Cancel</button>
                 </div>
             </div>
             <div class="row">
@@ -14,10 +14,10 @@
                         <input type="text" id="name" class="form-control" formControlName="name">
                     </div>
                     <div class="form-group">
-                        <label for="imagepath">Image Url</label>
-                        <input type="text" id="imagepath" class="form-control" formControlName="imagepath">
+                        <label for="imagePath">Image Url</label>
+                        <input type="text" id="imagePath" class="form-control" formControlName="imagePath" #imagePath>
                     </div>
-                    <img src="" class="img-fluid">
+                    <img [src]="imagePath.value" class="img-fluid" style="max-height: 300px">
                     <div class="form-group">
                         <label for="description">Description</label>
                         <textarea type="text" id="description" rows="6" class="form-control" formControlName="description"></textarea>
@@ -33,7 +33,7 @@
                                     <input type="number" class="form-control" formControlName="amount">
                                 </div>
                                 <div class="col-xl-2 col-md-2">
-                                    <button class="btn btn-danger" type="button">X</button>
+                                    <button class="btn btn-danger" type="button" (click)="onDeleteIngredient(i)">X</button>
                                 </div>
                             </div>
                             <hr>
