--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -19,9 +19,9 @@
             Manage
           </a>
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" style="cursor: pointer">Save Data</a>
+                    <a class="dropdown-item" style="cursor: pointer" (click)="onSaveData()">Save Data</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" style="cursor: pointer">Fetch Data</a>
+                    <a class="dropdown-item" style="cursor: pointer" (click)="onFetchData()">Fetch Data</a>
                 </div>
             </li>
         </ul>
