--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -14,22 +14,29 @@
             </li>
         </ul>
         <ul class="navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link" routerLinkActivate="active" [routerLink]="['signup']">Register</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" routerLinkActivate="activate" [routerLink]="['signin']">Login</a>
-            </li>
-            <li class="nav-item dropdown" appDropdown>
-                <a class="nav-link dropdown-toggle" style="cursor: pointer" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-            Manage
-          </a>
-                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" style="cursor: pointer" (click)="onSaveData()">Save Data</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" style="cursor: pointer" (click)="onFetchData()">Fetch Data</a>
-                </div>
-            </li>
+            <ng-template [ngIf]="!authService.isAuthenticated()">
+                <li class="nav-item">
+                    <a class="nav-link" routerLinkActivate="active" [routerLink]="['signup']">Register</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" routerLinkActivate="activate" [routerLink]="['signin']">Login</a>
+                </li>
+            </ng-template>
+            <ng-template [ngIf]="authService.isAuthenticated()">
+                <li class="nav-item">
+                    <a style="cursor: pointer" class="nav-link" (click)="onLogout()">Logout</a>
+                </li>
+                <li class="nav-item dropdown" *ngIf="authService.isAuthenticated()" appDropdown>
+                    <a class="nav-link dropdown-toggle" style="cursor: pointer" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                Manage
+              </a>
+                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" style="cursor: pointer" (click)="onSaveData()">Save Data</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" style="cursor: pointer" (click)="onFetchData()">Fetch Data</a>
+                    </div>
+                </li>
+            </ng-template>
         </ul>
     </div>
 </nav>
