--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -14,7 +14,7 @@
             </li>
         </ul>
         <ul class="navbar-nav">
-            <ng-template [ngIf]="!isAuthenticated()">
+            <ng-template [ngIf]="!(authState | async).authenticated">
                 <li class="nav-item">
                     <a class="nav-link" routerLinkActivate="active" [routerLink]="['signup']">Register</a>
                 </li>
@@ -22,7 +22,7 @@
                     <a class="nav-link" routerLinkActivate="activate" [routerLink]="['signin']">Login</a>
                 </li>
             </ng-template>
-            <ng-template [ngIf]="isAuthenticated()">
+            <ng-template [ngIf]="(authState | async).authenticated">
                 <li class="nav-item">
                     <a style="cursor: pointer" class="nav-link" (click)="onLogout()">Logout</a>
                 </li>
