--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -5,6 +5,6 @@
 </div>
 <div class="row mt-3">
     <div class="col-md-12">
-        <app-recipe-item *ngFor="let recipeElement of recipes; let i = index" [recipe]="recipeElement" [id]="i"></app-recipe-item>
+        <app-recipe-item *ngFor="let recipeElement of (recipeState | async).recipes; let i = index" [recipe]="recipeElement" [id]="i"></app-recipe-item>
     </div>
 </div>
